<resources>
    <string name="app_name">easyfitplan</string>


    <!-- Strings related to login -->
    <string name="title_activity_user_information">Register User</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="chestExercises">Chest Exercises</string>
    <string name="shoulderExercises">Shoulder Exercises</string>

    <!-- Strings related to Userprofile -->
    <string name="hello_user">Welcome %1$s!</string>
    <string name="information">From the information you just provided, the following calculations have been made:</string>
    <string name="metabolic_rate">Your BMR (Basal Metabolic Rate) is %1$s kcal. That means that you burn that many calories every day, just by sitting down and keeping your organs fully functional!</string>
    <string name="energy_expenditure">Your TDEE (Total Daily Energy Expenditure) is %1$s kcal. That is a daily average and includes all the activities you do on a weekly basis. Go you!</string>

    <string name="calorie_count">To maintain a healthy body, it is important not to give it too much or too little to work with. It is recommended that you stay within these limits.</string>
    <string name="weight_loss">Weightloss:\n %1$s kcal.</string>
    <string name="weight_stay">Maintain:\n %1$s kcal.</string>
    <string name="weight_gain">Weightgain:\n %1$s kcal.</string>

    <string-array name="activityLevel">
        <item>Sedentary (No Exercise)</item>
        <item>Light Exercise (1–2 days/week)</item>
        <item>Moderate Exercise (3–5 days/week)</item>
        <item>Heavy Exercise (6–7 days/week)</item>
        <item>Athlete 2 times per day</item>
    </string-array>

    <!-- Strings related to exercisedescribtions -->
    <string name="bench_press">Preparation: Lie supine on bench. Dismount barbell from rack over upper chest using wide oblique overhand grip./n Execution: Lower weight to chest. Press bar upward until arms are extended. Repeat.</string>

    <!-- Assorted Strings -->
    <string name="delete_exercise">Delete Exercise</string>
    <string name="Overview">You have not selected any exercises yet</string>
    <string name="Delete">To remove an exercise, swipe left or right</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Strings related to foodItemListview-->
    <string name="carbs">carbs %1$s!</string>
    <string name="protein">protein %1$s!</string>
    <string name="fats">fats %1$s!</string>
    <string name="caloriesEaten">You have eaten %1$s! calories today!</string>

</resources>
