<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/grad_bg">


    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/txtName"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/txtInfo"
        android:text="@string/information"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtBMRInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtInfo"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/metabolic_rate" />


    <TextView
        android:id="@+id/txtTDEEInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtBMRInfo"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/recommendedCal"
        android:text="@string/calorie_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTDEEInfo"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:id="@+id/weightLoss"
        android:text="@string/weight_loss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/recommendedCal"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/weightStay"
        android:text="@string/weight_stay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/weightLoss"
        android:layout_below="@id/recommendedCal"/>

    <TextView
        android:id="@+id/weightGain"
        android:text="@string/weight_gain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/weightStay"
        android:layout_below="@id/recommendedCal"/>

</RelativeLayout >